<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SettingsActivity"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/pref_header_about"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/summary_about"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <Switch
                android:layout_width="match_parent"
                android:id="@+id/mode"
                android:textStyle="bold"
                android:text="@string/dark_mode"
                android:textColor="#808080"
                android:layout_height="wrap_content"/>


        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/title_version"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/app_version"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            android:id="@+id/feedback"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/title_send_feedback"
                android:textStyle="bold"
                android:linksClickable="true"
                android:autoLink="web"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:text="@string/summary_support"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            android:id="@+id/privacy_policy"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/privacy_policy"
                android:textStyle="bold"
                android:linksClickable="true"
                android:autoLink="web"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            android:id="@+id/terms"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/title_terms"
                android:textStyle="bold"
                android:linksClickable="true"
                android:autoLink="web"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>